--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -1,6 +1,14 @@
+#navbar-container {
+    position: relative;
+    background-color: green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 #navbar {
     position: relative;
     width: 100%;
+    height: contain;
     background-image: url(../../images/wood-background.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -8,14 +16,12 @@
 }
 #navbar-items {
     position: relative;
-    top: 50px;
+    // top: 50px;
 }
 #logo {
     position: relative;
     display: flex;
     width: 15%;
-    left: 20px;
-    top: 30px;
 }
 
 #navbar-items li {
@@ -26,9 +32,7 @@
     display: inline-block;
     margin-right: 30px;
     margin-bottom: 0;
-    bottom: 10px;
     left: 30px;
-    border: 2px;
     font-size: 16px;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
@@ -48,11 +52,11 @@
     width: 20%;
     text-align: center;
 }
-#left-contact {
-    position: relative;
-    float: left;
-    padding-left: 20px;
-}
+// #left-contact {
+//     position: relative;
+//     float: left;
+//     padding-left: 20px;
+// }
 
 #contact-btn {
     color: white;
@@ -66,40 +70,37 @@
     position: relative;
     top: 30px;
     right: 40px;
-    margin-left: 10px;
+
 }
 
 @media screen and (max-width: 890px) {
     #logo {
-        width: 30%;
+        width: 20%;
     }
     .navbar-containers {
         font-size: 12px;
         position: relative;
-        left: -10px;
-        bottom: 20px;
         margin-left: 5px;
         margin-right: 5px;
-        padding: 10px;
+        padding: 15px;
     }
     #navbar-contact-container {
         width: auto;
         height: 60px;
         font-size: 16px;
         margin-right: 0px;
-        bottom: 200px;
         padding: 5px;
         left: 19vw;
+        background-color:pink;
     }
     #navbar-items {
         position: relative;
-        top: 85px;
     }
 }
 @media screen and (max-width:550px){
     #navbar-items {
         position: relative;
-        top: 80px;
+        right: 20px;
     }
     #left-contact {
         float: none;
